--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1><%= @team.name%></h1><br>
+    <h2>Team Motto: <%= @team.motto%></h2><br>
+    <% @members.each do |member|%>
+      <h2>Hero Name: <%= member.name%></h2><br>
+      <br>
+      <p>Hero Power: <%= member.power%></p><br>
+      <p>Hero Biography: <%= member.bio%></p><br>
+      <br>
+      <%end%>
 
 
-
+  </body>
+</html>
