--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Super Hero Form</title>
+  </head>
+  <body>
 
+    <h1>Create a Team and Heroes!</h1>
+    <br>
+    <form method="POST" action="/teams">
+      Team Name: <input type="text" name="team[name]"><br>
+      Team Motto: <input type="text" name="team[motto]"><br>
+
+      <br>
+      <h2>Hero 1</h2>
+      Hero's Name: <input type="text" id="member1_name" name="team[heroes][][name]"><br>
+      Hero's Power: <input type="text" id="member1_power" name="team[heroes][][power]"><br>
+      Hero's Biography: <input type="text" id="member1_bio" name="team[heroes][][biography]"><br>
+
+      <br>
+      <h2>Hero 2</h2>
+      Hero's Name: <input type="text" id="member2_name" name="team[heroes][][name]"><br>
+      Hero's Power: <input type="text" id="member2_power" name="team[heroes][][power]"><br>
+      Hero's Biography: <input type="text" id="member2_bio" name="team[heroes][][biography]"><br>
+
+      <br>
+      <h2>Hero 3</h2>
+      Hero's Name: <input type="text" id="member3_name" name="team[heroes][][name]"><br>
+      Hero's Power: <input type="text" id="member3_power" name="team[heroes][][power]"><br>
+      Hero's Biography: <input type="text" id="member3_bio" name="team[heroes][][biography]"><br>
+
+      <br>
+      <input type="submit" value="submit">
+    </form>
+
+  </body>
+</html>
